[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/MonsterSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Npc.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 82.0061

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MonsterSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MonsterSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -25.0, 25.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cause_damage"
} ]
}

[node name="Npc" instance=ExtResource( 1 )]
collision_layer = 2
script = ExtResource( 3 )
speed = 150
health = 50
max_health = 50

[node name="MonsterSprite" parent="." index="2" instance=ExtResource( 2 )]

[node name="AggroRange" type="Area2D" parent="." index="3"]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange" index="0"]
shape = SubResource( 1 )

[node name="AttackRange" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange" index="0"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 4 )

[node name="AttackInterval" type="Timer" parent="." index="7"]
wait_time = 1.5
